--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- BOOTSTRAP -->
+
+ <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css' integrity='sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==' crossorigin='anonymous'/>
+
+
   <title>Bootstrap Grid Layout</title>
 </head>
 <body>
+
+  <main>
+    <div class="container text-center pt-5 ">
+      <h1>Bootstrap 5 Responsive Grid</h1>
+      <p class="fs-5 fw-light">Layout a griglia con diversi breakpoint (sm, md, lg).</p>
+    </div>
+    <div class="container mt-5">
+      <div class="row row-cols-1 row-cols-md-2">
+        <div class="col bg-light p-4">
+          <h3>Colonna 1</h3>
+          <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
+        </div>
+        <div class="col text-bg-secondary p-4">
+          <h3>Colonna 2</h3>
+          <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
+        </div>
+      </div>
+      <div class="row row-cols-md-3 my-4">
+        <div class="col-6 text-bg-primary p-4">
+          <h3>Colonna 1</h3>
+          Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</div>
+        <div class="col-6 text-bg-success p-4">
+          <h3>Colonna 2</h3>
+          Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi</div>
+        <div class="col-12 text-bg-danger p-4">
+          <h3>Colonna 3</h3>
+          Larghezza intera su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</div>
+      </div>
+      <div class="row row-cols-2 row-cols-md-4 pb-5">
+        <div class="col bg-info text-light p-4 ">
+          <h3>Colonna 1</h3>
+          <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi</p>
+        </div>
+        <div class="col bg-warning text-light p-4">
+          <h3>Colonna 2</h3>
+          <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi</p>
+        </div>
+        <div class="col  text-bg-dark p-4">
+          <h3>Colonna 3</h3>
+          <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi</p>
+        </div>
+        <div class="col bg-light p-4">
+          <h3>Colonna 4</h3>
+          <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi</p>
+        </div>
+      </div>
+    </div>
+
+  </main>
   
 </body>
 </html>
