--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </div>
     <div class="container mt-5">
       <div class="row row-cols-1 row-cols-md-2">
-        <div class="col bg-light p-4">
+        <div class="col col-lg-4 bg-light p-4">
           <h3>Colonna 1</h3>
           <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
         </div>
-        <div class="col text-bg-secondary p-4">
+        <div class="col col-lg-8 text-bg-secondary p-4">
           <h3>Colonna 2</h3>
           <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi.</p>
         </div>
